--- a/heckman-selection.Rmd
+++ b/heckman-selection.Rmd
@@ -254,3 +254,7 @@ tibble(
 ```
 
 
+
+## Source
+
+Base R source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/heckman_selection.R
