--- a/probit.Rmd
+++ b/probit.Rmd
@@ -170,3 +170,6 @@ list(
 
 
 
+## Source
+
+Base R source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/bivariateProbit.R
