--- a/tobit.Rmd
+++ b/tobit.Rmd
@@ -182,3 +182,6 @@ rbind(
   round(3)
 ```
 
+## Source
+
+Base R source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/tobit.R
