--- a/penalized-maximum-likelihood.Rmd
+++ b/penalized-maximum-likelihood.Rmd
@@ -5,14 +5,14 @@
 
 
 
-A standard regression model via penalized likelihood.  See the standard_lm.R
+A standard regression model via penalized likelihood.  See the [linear regression example][Standard Linear Regression]
 code for comparison. Here the penalty is specified (via lambda argument) but
 one would typically estimate via cross-validation or some other fashion. Two
 penalties are possible with the function.  One using the (squared) L2 norm
-(aka ridge regression, tikhonov regularization), another using the L1 norm
+(aka ridge regression, Tikhonov regularization), another using the L1 norm
 (aka lasso) which has the possibility of penalizing coefficients to zero, and
 thus can serve as a model selection procedure. I have a more technical
-appraoch to the lasso in the lasso.R file.
+approach to the lasso in the lasso.R file.
 
 Note that both L2 and L1 approaches can be seen as maximum a posteriori (MAP)
 estimates for a Bayesian regression with a specific prior on the
@@ -122,9 +122,9 @@ penalized_ML2 = function(par,
 
 
 
-## Obtain Model Estimates
+## Estimation
 
-Setup the model matrix for use with optim.
+Setup the model matrix for use with <span class="func" style = "">optim</span>.
 
 ```{r penalized-ml-mm}
 X = cbind(1, X)
