--- a/cubic-spline.Rmd
+++ b/cubic-spline.Rmd
@@ -149,4 +149,4 @@ ggplot(d3) +
 
 ## Source
 
-Base R source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/cubicsplines.R
+Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/cubicsplines.R
