--- a/heckman-selection.Rmd
+++ b/heckman-selection.Rmd
@@ -257,4 +257,4 @@ tibble(
 
 ## Source
 
-Base R source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/heckman_selection.R
+Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/heckman_selection.R
