--- a/logistic-regression.Rmd
+++ b/logistic-regression.Rmd
@@ -140,4 +140,5 @@ rbind(
 
 
 ## Source
- Base R source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/standard_logistic.R
+
+Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/standard_logistic.R
