--- a/mixed-model-one-factor.Rmd
+++ b/mixed-model-one-factor.Rmd
@@ -121,4 +121,4 @@ summary(lme)
 
 ## Source
 
-Base R source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/Mixed%20Models/one_factor_RE.R
+Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/Mixed%20Models/one_factor_RE.R
