--- a/multinomial.Rmd
+++ b/multinomial.Rmd
@@ -289,4 +289,4 @@ cbind(logLik(fit), out$value)
 
 ## Source
 
-Base R source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/multinomial.R
+Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/multinomial.R
