--- a/naive-bayes.Rmd
+++ b/naive-bayes.Rmd
@@ -37,4 +37,4 @@ lapply(xf, function(var)
 
 ## Source
 
-Base R source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/naivebayes.R
+Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/naivebayes.R
