--- a/nelder-mead.Rmd
+++ b/nelder-mead.Rmd
@@ -497,4 +497,5 @@ rbind(
 
 
 ## Source
-Base R source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/nelder_mead.R
+
+Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/nelder_mead.R
