--- a/penalized-maximum-likelihood.Rmd
+++ b/penalized-maximum-likelihood.Rmd
@@ -246,4 +246,5 @@ round(
 
 
 ## Source
-Base R source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/penalized_ML.R
+
+Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/penalized_ML.R
