--- a/quantile-regression.Rmd
+++ b/quantile-regression.Rmd
@@ -92,4 +92,4 @@ engel %>%
 
 ## Source
 
-Base R source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/quantile_regression.Rmd
+Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/quantile_regression.Rmd
