--- a/ridge.Rmd
+++ b/ridge.Rmd
@@ -102,4 +102,5 @@ data.frame(
 
 
 ## Source
-Base R source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/ridge.R
+
+Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/ridge.R
