--- a/tobit.Rmd
+++ b/tobit.Rmd
@@ -184,4 +184,4 @@ rbind(
 
 ## Source
 
-Base R source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/tobit.R
+Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/tobit.R
