--- a/gradient-descent.Rmd
+++ b/gradient-descent.Rmd
@@ -129,4 +129,5 @@ rbind(
 
 
 ## Source
-Base R source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/gradient_descent.R
+
+Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/gradient_descent.R
