--- a/lasso.Rmd
+++ b/lasso.Rmd
@@ -146,4 +146,5 @@ data.frame(
 
 
 ## Source
-Base R source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/lasso.R
+
+Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/lasso.R
