--- a/linear-regression.Rmd
+++ b/linear-regression.Rmd
@@ -184,4 +184,4 @@ c(sqrt(pars_ML[1]), sqrt(pars_LS[1]))
 
 ## Source
 
-Base R source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/standard_lm.R
+Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/standard_lm.R
