--- a/marginal-structural.Rmd
+++ b/marginal-structural.Rmd
@@ -177,4 +177,4 @@ broom::tidy(msm)
 
 ## Source
 
-Base R source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/ipw.R
+Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/ipw.R
