--- a/probit.Rmd
+++ b/probit.Rmd
@@ -171,4 +171,4 @@ list(
 
 ## Source
 
-Base R source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/bivariateProbit.R
+Source code found at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/bivariateProbit.R
