--- a/hurdle.Rmd
+++ b/hurdle.Rmd
@@ -1,4 +1,4 @@
-# Hurdle Models
+# Hurdle Model
 
 
 Hurdle models are applied to situations in which target data has relatively many of one value, usually zero, to go along with the other observed values.  They are two-part models, a logistic model for whether an observation is zero or not, and a count model for the other part. The key distinction from the usual 'zero-inflated' count models, is that the count distribution does not contribute to the excess zeros.  While the typical application is count data, the approach can be applied to any distribution in theory. 
