--- a/marginal-structural.Rmd
+++ b/marginal-structural.Rmd
@@ -1,4 +1,4 @@
-# Marginal Structural Models
+# Marginal Structural Model
 
 This is a demonstration of a simple marginal structural model for estimation of so-called 'causal' effects using inverse probability weighting.
 
