--- a/em-ppca.Rmd
+++ b/em-ppca.Rmd
@@ -15,7 +15,7 @@ X = scale(state.x77)
 
 ### Function
 
-```{r em-ppca}
+```{r em-ppca-func}
 em_ppca = function(
   X,
   nComp = 2,
@@ -31,8 +31,10 @@ em_ppca = function(
   # maxits: maximum iterations
   # showits: show iterations
   
-  require(pracma) # for orthonormal basis of W; pcaMethods package has also
-  require(psych)  # for tr
+  # require(pracma) 
+
+  tr = function(x) sum(diag(x), na.rm = TRUE)
+  
   
   # starting points and other initializations
   N = nrow(X)
@@ -40,6 +42,7 @@ em_ppca = function(
   L = nComp
 
   S = (1/N) * t(X)%*%X
+  
   evals = eigen(S)$values
   evecs = eigen(S)$vectors
 
@@ -72,13 +75,13 @@ em_ppca = function(
       W_old = W
     }
     
-    ll.old = ll
+    ll_old = ll
     
     Psi = sigma2*diag(L)
     M   = t(W_old) %*% W_old + Psi
     
     # E and M 
-    W_new = S %*% W_old %*% solve( Psi + solve(M) %*% t(W_old) %*% S %*% W_old )   
+    W_new  = S %*% W_old %*% solve( Psi + solve(M) %*% t(W_old) %*% S %*% W_old )   
     sigma2 = 1/D * tr(S - S %*% W_old %*% solve(M) %*% t(W_new))
 
     Z  = solve(M) %*% t(W_new) %*% t(X)
@@ -99,16 +102,16 @@ em_ppca = function(
     if (showits & (it == 1 | it%%5 == 0))                          
       cat(paste(format(it), "...", "\n", sep = ""))
     
-    converged = max(abs(ll.old-ll)) <= tol
+    converged = max(abs(ll_old-ll)) <= tol
   }
   
-  W     = orth(W_new)
+  W     = pracma::orth(W_new) # for orthonormal basis of W; pcaMethods package has also
   evs   = eigen(cov(X %*% W))
   evecs = evs$vectors
   
   W = W %*% evecs
   Z = X %*% W
-  Xrecon = Z %*% t(W)
+  Xrecon   = Z %*% t(W)
   reconerr = sum((Xrecon - X)^2)
   
   if (showits)                                                     # Show last iteration
@@ -142,7 +145,7 @@ results_ppca = em_ppca(
   maxit = 100
 )
 
-results_ppca  
+str(results_ppca)
 ```
 
 ### Comparison
@@ -222,6 +225,249 @@ GGally::ggpairs(data.frame(
 
 GGally::ggpairs(data.frame(
   data    = X[, 2],
+  custom  = Xrecon[, 2],
+  pcaMeth = Xrecon_pcam[, 2]
+))
+```
+
+```{r em-ppca-vis-scores}
+qplot(Xrecon[, 1], Xrecon_pcam[, 1])
+
+GGally::ggpairs(data.frame(scores_em, scores_pcam) )
+```
+
+
+
+
+
+### Missing Data Example
+
+A slightly revised approach can be taken in the case of missing value.
+
+
+#### Data Setup
+
+```{r em-ppca-miss-setup}
+# create some missing values
+set.seed(123)
+
+X_miss = X
+NAindex = sample(length(X), 20)
+X_miss[NAindex] = NA
+```
+
+
+#### Function
+
+```{r em-ppca-miss-func}
+em_ppca_miss = function(X, nComp=2, tol=.00001, maxits=100, showits=T){
+  # Arguments 
+  # X: numeric data
+  # nComp: number of components
+  # tol = tolerance level
+  # maxits: maximum iterations
+  # showits: show iterations
+  # require(pracma) # for orthonormal basis of W; pcaMethods package has also
+  
+  tr = function(x) sum(diag(x), na.rm = TRUE)
+  
+  # starting points and other initializations
+  X_orig = X
+  X = X
+  N = nrow(X_orig)
+  D = ncol(X_orig)
+  L = nComp
+  NAs = is.na(X_orig)
+
+  X[NAs] = 0
+  S = (1/N) * t(X)%*%X
+  
+  evals = eigen(S)$values
+  evecs = eigen(S)$vectors
+
+  V = evecs[,1:L]
+  Lambda = diag(evals[1:L])
+  
+  # latent variables
+  Z = t(replicate(L, rnorm(N))) 
+  
+  # variance; average variance associated with discarded dimensions
+  sigma2 = 1/(D-L) * sum(evals[(L+1):D])
+  
+  # loadings
+  W = V %*% chol(Lambda-sigma2*diag(L)) %*% diag(L)           
+
+  it = 0
+  converged = FALSE
+  ll = 0
+  
+   # Show iterations
+  if (showits)
+    cat(paste("Iterations of EM:", "\n"))
+  
+  while ((!converged) & (it < maxits)) {                  
+    if(exists('W_new')){
+      W_old = W_new
+    }
+    else {
+      W_old = W
+    }
+    
+    ll_old = ll
+    
+    # deal with missingness via projection
+    proj  = t(W_old%*%Z)
+    X_new = X_orig
+    X_new[NAs] = proj[NAs]
+    X = X_new
+    
+    Psi = sigma2*diag(L)
+    M   = t(W_old) %*% W_old + Psi
+    
+    # E and M
+    W_new  = S %*% W_old %*% solve( Psi + solve(M)%*%t(W_old)%*%S%*%W_old )
+    sigma2 = 1/D * tr(S - S%*%W_old%*%solve(M)%*%t(W_new))
+
+    Z = solve(M)%*%t(W_new)%*%t(X)
+    
+  
+    # log likelihood as in paper
+    # ZZ = sigma2*solve(M) + Z%*%t(Z)
+    # ll = .5*sigma2*D + .5*tr(ZZ) + .5*sigma2 * X%*%t(X) -
+    #      1/sigma2 * t(Z)%*%t(W_new)%*%t(X) + .5*sigma2 * tr(t(W_new)%*%W_new%*%ZZ)
+    # ll = -sum(ll)
+    
+    # more straightforward
+    ll = dnorm(X, mean = t(W_new %*% Z), sd = sqrt(sigma2), log = TRUE)
+    ll = -sum(ll)
+
+    it = it + 1
+    
+    # if showits, show first and every 5th iteration
+    if (showits & (it == 1 | it%%5 == 0))                          
+      cat(paste(format(it), "...", "\n", sep = ""))
+    
+    converged = max(abs(ll_old-ll)) <= tol
+  }
+  
+  W     = pracma::orth(W_new)   # for orthonormal basis of W
+  evs   = eigen(cov(X %*% W))
+  evecs = evs$vectors
+  
+  W = W %*% evecs
+  Z = X %*% W
+  Xrecon   = Z %*% t(W)
+  reconerr = sum((Xrecon-X)^2)
+  
+  if (showits)                                                     # Show last iteration
+    cat(paste0(format(it), "...", "\n"))
+  
+  list(
+    scores   = Z,
+    loadings = W,
+    Xrecon   = Xrecon,
+    reconerr = reconerr,
+    ll       = ll,
+    sigma2   = sigma2
+  )
+}
+```
+
+
+#### Estimation
+
+Run the PCA.
+
+```{r em-ppca-miss-est}
+results_ppca_miss = em_ppca_miss(
+  X = X_miss,
+  nComp = 2,
+  tol   = 1e-8,
+  maxit = 100
+)
+
+str(results_ppca_miss)
+```
+
+
+
+#### Comparison
+
+Extract reconstructed values and loadings for comparison.
+
+```{r em-ppca-miss-extract}
+Xrecon      = results_ppca_miss$Xrecon
+loadings_em = results_ppca_miss$loadings
+scores_em   = results_ppca_miss$scores
+```
+
+
+Compare to standard pca on full data set if desired.
+
+```{r em-ppca-miss-compare-pca, eval=FALSE}
+standard_pca =  princomp(scale(state.x77))
+
+scores_standard_pca   = standard_pca$scores[,1:2]
+loadings_standard_pca = standard_pca$loadings[,1:2]
+Xrecon_standard_pca   = scores_standard_pca%*%t(loadings_standard_pca)
+```
+
+
+
+
+Compare results to output from <span class="pack" style = "">pcaMethods</span>, which also has probabilistic PCA (demonstrated next). Note that the signs for loadings/scores may be different
+
+
+```{r em-ppca-miss--compare}
+library(pcaMethods)
+
+results_pcam  = pca(
+  X_miss,
+  nPcs = 2,
+  threshold = 1e-8,
+  method = 'ppca',
+  scale  = 'none',
+  center = FALSE
+)
+
+loadings_pcam = loadings(results_pcam)
+scores_pcam   = scores(results_pcam)
+```
+
+
+Compare loadings and scores.
+
+```{r em-ppca-compare-loadings}
+round(cbind(loadings_pcam, loadings_em, loadings_standard_pca), 3)
+sum((abs(loadings_pcam) - abs(loadings_em)) ^ 2)
+round(cbind(abs(scores_pcam), abs(scores_em)), 2)
+```
+
+
+Compare reconstructed data sets.
+
+```{r em-ppca-compare-recon}
+Xrecon_pcam = scores_pcam %*% t(loadings_pcam)
+
+mean((Xrecon_pcam - X_miss)^2)  
+mean(abs(Xrecon_pcam - Xrecon))
+
+mean(abs(Xrecon_pcam - Xrecon))
+```
+
+
+
+### Visualize
+
+```{r em-ppca-vis-recon}
+GGally::ggpairs(data.frame(
+  data    = X_miss[, 1],
+  custom  = Xrecon[, 1],
+  pcaMeth = Xrecon_pcam[, 1]
+))
+
+GGally::ggpairs(data.frame(
+  data    = X_miss[, 2],
   custom  = Xrecon[, 2],
   pcaMeth = Xrecon_pcam[, 2]
 ))
